# project-ITMO-cyclodextrine

./: 365.py  LICENSE  README.md  all_vectors_beetw_cdx-lig.py  anather_lig.py  big_test_working.py  create_lig_vectors.py  data.pzfx  finale_testing.py  function-example.py  function_ready.py  hello.py  last_ver.py  matrix-test.py  meh.py  newest_ver.py  old.py  pyproject.toml  something-fixed-working.py  test_arrays.ipynb  test_rot.py  working_version.py
For_QC/For_QC/CDX/: CDX.inp  CDX.xyz
For_QC/For_QC/Cyclodextrine_ligand_names_-1.0/: Cyclodextrine_ligand_names_-1.0.inp  Cyclodextrine_ligand_names_-1.0.xyz
For_QC/For_QC/Cyclodextrine_ligand_names_-10.0/: Cyclodextrine_ligand_names_-10.0.inp  Cyclodextrine_ligand_names_-10.0.xyz
For_QC/For_QC/Cyclodextrine_ligand_names_-11.0/: Cyclodextrine_ligand_names_-11.0.inp  Cyclodextrine_ligand_names_-11.0.xyz
For_QC/For_QC/Cyclodextrine_ligand_names_-12.0/: Cyclodextrine_ligand_names_-12.0.inp  Cyclodextrine_ligand_names_-12.0.xyz
For_QC/For_QC/Cyclodextrine_ligand_names_-13.0/: Cyclodextrine_ligand_names_-13.0.inp  Cyclodextrine_ligand_names_-13.0.xyz
For_QC/For_QC/Cyclodextrine_ligand_names_-14.0/: Cyclodextrine_ligand_names_-14.0.inp  Cyclodextrine_ligand_names_-14.0.xyz
For_QC/For_QC/Cyclodextrine_ligand_names_-15.0/: Cyclodextrine_ligand_names_-15.0.inp  (+1 more)
old versions/: anather_lig.py  create_lig_vectors.py  finale_testing.py  function-turning-thing.py  sasa.py  something-kinda.py  test-calc.py  working_version.py
working/: bsa.py  finals_no-rot.py  functions-no-rot.py  rot-ready.py
(+70 files in other folders)
