[tool.poetry]
name = "primer"
version = "0.1.0"
description = ""
authors = ["nastya"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "<1.24.0"
pandas = "^1.5.2"
bio = "^1.5.3"
matplotlib = "^3.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
